--- a/index.html
+++ b/index.html
@@ -1,25 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Check-In App</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Check In App</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <h1>Check In</h1>
-  <input type="text" id="nameInput" placeholder="Enter your name" />
-  <button onclick="submitCheckIn()">Check In</button>
-
-  <script>
-    function submitCheckIn() {
-      const name = document.getElementById("nameInput").value;
-      fetch("https://script.google.com/macros/s/AKfycbywfDk2OETkfoBWvsD-ojrwQN028fAgEajsaVpNk0Y-YGcqj9_2en-PtDQubHCPCfnB/exec", {
-        method: "POST",
-        body: JSON.stringify({ name: name }),
-        headers: { "Content-Type": "application/json" }
-      })
-      .then(res => res.text())
-      .then(data => alert("Checked in!"))
-      .catch(err => alert("Error: " + err));
-    }
-  </script>
+  <input type="text" id="name" placeholder="Enter your name" />
+  <button onclick="checkIn()">Check In</button>
+  <p id="response"></p>
+  <script src="script.js"></script>
 </body>
 </html>
