--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
   <h1>Check In</h1>
   <input type="text" id="name" placeholder="Enter your name" />
-  <button id="checkin-btn" onclick="checkIn()" disabled>Check In</button>
+  <button id="checkin-btn" onclick="checkIn()" disabled>Time In</button>
+  <button id="checkout-btn" onclick="checkOut()" disabled>Time Out</button>
   <p id="gps-status">Getting your location...</p>
   <p id="response"></p>
   <script src="script.js"></script>
