--- a/index.html
+++ b/index.html
@@ -7,12 +7,18 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Check In</h1>
-  <input type="text" id="name" placeholder="Enter your name" />
-  <button id="checkin-btn" onclick="checkIn()" disabled>Time In</button>
-  <button id="checkout-btn" onclick="checkOut()" disabled>Time Out</button>
-  <p id="gps-status">Getting your location...</p>
-  <p id="response"></p>
+    <div class="container">
+    <h2>Employee Check-In</h2>
+    <input type="text" id="name" placeholder="Enter your name" />
+    <div>
+      <button id="checkin-btn" onclick="checkIn()" disabled>Time In</button>
+      <button id="checkout-btn" onclick="checkOut()" disabled>Time Out</button>
+      <p id="gps-status">Getting your location...</p>
+       <p id="response"></p>
+    </div>
+    <div class="message" id="message"></div>
+  </div>
+  
   <script src="script.js"></script>
 </body>
 </html>
