--- a/admin.html
+++ b/admin.html
@@ -21,6 +21,19 @@
   </style>
 </head>
 <body>
+  <a href="index.html" style="
+  display: inline-block;
+  margin-bottom: 20px;
+  padding: 8px 16px;
+  background-color: #f0f0f0;
+  color: #333;
+  text-decoration: none;
+  border-radius: 6px;
+  font-size: 14px;
+  border: 1px solid #ccc;
+">← Back to Home</a>
+
+
   <h2>🔐 Admin Login</h2>
   <input type="text" id="adminUsername" placeholder="Username" />
   <input type="password" id="adminPassword" placeholder="Password" />
@@ -33,6 +46,7 @@
     <input type="number" id="locationLng" placeholder="Longitude" />
     <button onclick="addLocation()">Save Location</button>
   </div>
+  
 
 <script src="scriptAdmin.js"></script>
   
