--- a/admin.html
+++ b/admin.html
@@ -46,6 +46,13 @@
     <input type="number" id="locationLng" placeholder="Longitude" />
     <button onclick="addLocation()">Save Location</button>
   </div>
+
+  <div id="loadingModal" class="modal">
+  <div class="modal-content">
+    <div class="spinner"></div>
+    <p>Saving location...</p>
+  </div>
+  </div>
   
 
 <script src="scriptAdmin.js"></script>
