--- a/admin.html
+++ b/admin.html
@@ -47,7 +47,7 @@
     <button onclick="addLocation()">Save Location</button>
   </div>
 
-  <div id="loadingModal" class="modal">
+  <div id="loadingModal" class="modal" style="display: none;">
     <div class="modal-content">
       <div class="spinner"></div>
       <p>Saving location...</p>
