--- a/admin.html
+++ b/admin.html
@@ -1,40 +1,101 @@
-<!-- admin.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <title>Admin Panel</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
   <style>
     body {
-      font-family: sans-serif;
+      font-family: 'Inter', sans-serif;
+      margin: 0;
+      background-color: #f8f9fa;
+    }
+    header {
+      background-color: #fff;
+      padding: 1rem 2rem;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    .back-link {
+      text-decoration: none;
+      background: #eee;
+      color: #333;
+      padding: 8px 16px;
+      border-radius: 8px;
+      font-size: 14px;
+    }
+    .container {
+      max-width: 400px;
+      margin: 4rem auto;
+      background: white;
       padding: 2rem;
+      border-radius: 16px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.05);
     }
-    input, button {
-      margin: 5px 0;
-      padding: 10px;
+    h2, h3 {
+      margin-top: 0;
+    }
+    input {
       width: 100%;
-      max-width: 300px;
+      padding: 10px;
+      margin: 12px 0;
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      font-size: 14px;
     }
-    #locationForm {
-      margin-top: 1rem;
+    button {
+      width: 100%;
+      padding: 12px;
+      font-size: 14px;
+      background-color: #28a745;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 999;
+      top: 0; left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,0.3);
+      justify-content: center;
+      align-items: center;
+    }
+    .modal-content {
+      background: white;
+      padding: 2rem;
+      border-radius: 12px;
+      text-align: center;
+    }
+    .spinner {
+      border: 4px solid #f3f3f3;
+      border-top: 4px solid #007bff;
+      border-radius: 50%;
+      width: 40px;
+      height: 40px;
+      animation: spin 1s linear infinite;
+      margin: auto;
+    }
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
     }
   </style>
 </head>
 <body>
-  <a href="index.html" style="
-  display: inline-block;
-  margin-bottom: 20px;
-  padding: 8px 16px;
-  background-color: #f0f0f0;
-  color: #333;
-  text-decoration: none;
-  border-radius: 6px;
-  font-size: 14px;
-  border: 1px solid #ccc;
-">← Back to Home</a>
 
+<header>
+  <h2>Admin Panel</h2>
+  <a class="back-link" href="index.html">← Back to Home</a>
+</header>
 
-  <h2>🔐 Admin Login</h2>
+<div class="container">
+  <h3>🔐 Admin Login</h3>
   <input type="text" id="adminUsername" placeholder="Username" />
   <input type="password" id="adminPassword" placeholder="Password" />
   <button onclick="adminLogin()">Login</button>
@@ -46,16 +107,15 @@
     <input type="number" id="locationLng" placeholder="Longitude" />
     <button onclick="addLocation()">Save Location</button>
   </div>
+</div>
 
-  <div id="loadingModal" class="modal" style="display: none;">
-    <div class="modal-content">
-      <div class="spinner"></div>
-      <p>Saving location...</p>
-    </div>
+<div id="loadingModal" class="modal">
+  <div class="modal-content">
+    <div class="spinner"></div>
+    <p>Saving location...</p>
   </div>
-  
+</div>
 
 <script src="scriptAdmin.js"></script>
-  
 </body>
 </html>
