--- a/index.html
+++ b/index.html
@@ -3,76 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <title>Check-In System</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
-  <style>
-    body {
-      font-family: 'Inter', sans-serif;
-      margin: 0;
-      background-color: #f8f9fa;
-    }
-    header {
-      background-color: #fff;
-      padding: 1rem 2rem;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      position: sticky;
-      top: 0;
-      z-index: 10;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 1.25rem;
-    }
-    .admin-link {
-      text-decoration: none;
-      background: #333;
-      color: white;
-      padding: 8px 16px;
-      border-radius: 8px;
-      font-size: 14px;
-    }
-    .container {
-      max-width: 400px;
-      margin: 4rem auto;
-      background: white;
-      padding: 2rem;
-      border-radius: 16px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.05);
-    }
-    h2 {
-      margin-top: 0;
-      font-size: 1.5rem;
-    }
-    input {
-      width: 100%;
-      padding: 10px;
-      margin: 12px 0;
-      border: 1px solid #ddd;
-      border-radius: 8px;
-      font-size: 14px;
-    }
-    button {
-      width: 48%;
-      padding: 10px;
-      font-size: 14px;
-      margin: 10px 1%;
-      border: none;
-      border-radius: 8px;
-      color: white;
-      background-color: #007bff;
-      cursor: pointer;
-    }
-    button:disabled {
-      background-color: #ccc;
-      cursor: not-allowed;
-    }
-    #gps-status, #response {
-      font-size: 14px;
-      margin-top: 10px;
-    }
-  </style>
+ <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
+ <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
