--- a/admin.html
+++ b/admin.html
@@ -19,8 +19,8 @@
   <input type="password" id="adminPassword" placeholder="Password" />
   <button onclick="adminLogin()">Login</button>
 
-  <div id="locationForm" style="display:none;">
-    <h3>📍 Add Allowed Location</h3>
+  <div id="locationForm" style="display:none;" class="location-section">
+    <h3 class="center-heading">📍 Add Allowed Location</h3>
     <input type="text" id="locationName" placeholder="Location Name" />
     <input type="number" id="locationLat" placeholder="Latitude" />
     <input type="number" id="locationLng" placeholder="Longitude" />
