--- a/index.html
+++ b/index.html
@@ -15,13 +15,20 @@
 
 <div class="container">
   <h2>Employee Check-In</h2>
-  <input type="text" id="name" placeholder="Enter your name" />
+  <input type="text" id="name" placeholder=" กรุณากรอกรหัสพนักงานของคุณ/ကျေးဇူးပြု၍ သင့်ဝန်ထမ်းကုဒ်ကို ထည့်ပါ။ " />
   <div style="display:flex; justify-content:space-between;">
     <button id="checkin-btn" onclick="checkIn()" disabled>Time In</button>
     <button id="checkout-btn" onclick="checkOut()" disabled>Time Out</button>
   </div>
   <p id="gps-status">📍 Locating...</p>
   <p id="response"></p>
+</div>
+
+<div id="loadingModal" class="modal" style="display: none;">
+  <div class="modal-content">
+    <div class="spinner"></div>
+    <p>Processing...</p>
+  </div>
 </div>
 
 <script src="script.js"></script>
