--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <div class="container">
   <h2>Employee Check-In</h2>
-  <input type="text" id="name" placeholder=" กรุณากรอกรหัสพนักงานของคุณ/ကျေးဇူးပြု၍ သင့်ဝန်ထမ်းကုဒ်ကို ထည့်ပါ။ " />
+  <input type="text" id="name" placeholder=" รหัสพนักงาน/ဝန်ထမ်းကုဒ် " />
   <div style="display:flex; justify-content:space-between;">
     <button id="checkin-btn" onclick="checkIn()" disabled>Time In</button>
     <button id="checkout-btn" onclick="checkOut()" disabled>Time Out</button>
