--- a/admin.html
+++ b/admin.html
@@ -28,7 +28,7 @@
   </div>
 </div>
 
-<div id="loadingModal" class="modal">
+<div id="loadingModalAdmin" class="modal" style="display: none;">
   <div class="modal-content">
     <div class="spinner"></div>
     <p>Saving location...</p>
