--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <div class="input-group">
     <label for="name">Employee Code</label>
     <input type="text" id="name" placeholder="รหัสพนักงาน / ဝန်ထမ်းကုဒ်" />
+    <datalist id="employeeList"></datalist>
   </div>
 
   <div class="button-group">
