--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <div class="input-group">
     <label for="name">Employee Code</label>
-    <input type="text" id="name" placeholder="รหัสพนักงาน / ဝန်ထမ်းကုဒ်" />
+    <input type="text" id="name" list="employeeList" placeholder=" รหัสพนักงาน/ဝန်ထမ်းကုဒ် " />
     <datalist id="employeeList"></datalist>
   </div>
 
