--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <h2>Employee Check-In</h2>
 
   <div class="input-group">
-    <label for="name">Employee Code</label>
-    <input type="text" id="name" list="employeeList" placeholder=" รหัสพนักงาน/ဝန်ထမ်းကုဒ် " />
+    <label for="employeeCode">Employee Code</label>
+    <input type="text" id="employeeCode" list="employeeList" placeholder=" รหัสพนักงาน/ဝန်ထမ်းကုဒ် " />
     <datalist id="employeeList"></datalist>
   </div>
 
